--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server" : "json-server --watch db.json --port8080"
   },
   "dependencies": {
     "axios": "^1.9.0",
