--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server" : "json-server --watch db.json --port8080"
+    "server": "json-server --watch db.json --port8080"
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -19,6 +19,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
