Footer Sturcture added

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "server": "json-server --watch db.json --port8080"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "json-server": "^0.17.4",
