--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "react-slick": "^0.30.3",
+    "reactjs-popup": "^2.0.6",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.4"
   },
