--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "react-slick": "^0.30.3",
     "reactjs-popup": "^2.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.4"
   },
